Bug#39540 ndb_restore crash while restoring log from different endian  - Don't call 'Twiddle' when attribute is NULL  - Add asserts to early detect that 'Twiddle' is not called for NULL